--- a/index.html
+++ b/index.html
@@ -116,51 +116,51 @@
           <div class="text-container">
             <p>
               I assume you want to learn more about me by visiting my website,
-              so it won't be as short as my one-line LinkedIn About Me. Get
+              which will be longer than my one-line LinkedIn About Me. Get
               ready!
             </p>
             <p>
               Hi, I'm <b>Rüçhan</b>. I'm studying computer science + engineering
-              at #1 university in Turkey according to global rankings, where I
-              entered as a top-scored student, as I achieved 21st place out of
-              2.5 million students in the univesity entrance exam, and received
+              at the #1 university in Turkey according to global rankings, where
+              I entered as a top-scored student, achieving 21st place out of 2.5
+              million students in the university entrance exam and receiving
               several prestigious scholarships.
             </p>
             <p>
-              As I backend engineer, no surprise I love backend systems,
+              As a backend engineer, it's no surprise I love backend systems,
               infrastructure, and distributed systems. I want to pursue two
-              different career paths in software engineering, namely,
-              <b>Full Stack + Product</b> and <b>Backend + Infrastructure</b>.
-              I'm going to stick with one after I try both and see which one I
-              perform well or am suited more. Meanwhile, I'm open to both
-              positions.
-            </p>
-            <p>
-              Personally, I love writing and note-taking, and therefore I love
-              Notion. I took initiative and became the first Notion Campus
-              Leader of my university, to make people's lives better and
-              organized, more succesful and happier.
-            </p>
-            <p>
-              I read Substack newsletters to grow personally and technically,
-              mostly written by experts in thier fields. I gained a lot of
-              knowledge of System Design and Software Architecture, as well as
-              invaluable soft skills to be an excellent team member in the
-              future. By doing this, I could easily pass
-              <b>AWS Certified Developer - Associate</b> certification during my
-              undergrad. Currently, I'm taking courses from Meta Back-End
-              Developer Professional Certificate.
-            </p>
-            <p>
-              I love spending time with my family and friends, and traveling. I
-              went to Canada as an exchange student in Winter 2024, where I
-              experienced North America as a university student, and ramped up
-              my English to advanced level, and traveled a LOT.
-            </p>
-            <p>
-              I want to work mostly for Big Tech companies in Europe offices,
+              different career paths in software engineering:
+              <b>Full Stack + Product</b> and <b>Backend + Infrastructure</b>. I
+              will stick with one after trying both and see which one I perform
+              well or am more suited to. Meanwhile, I'm open to both positions.
+              I want to work mainly for big tech companies in European offices,
               working on large-scale systems and products, making people's lives
               easier and having a lasting impact.
+            </p>
+
+            <p>
+              I read Substack newsletters to grow personally and technically,
+              written mainly by experts in their fields. I gained a lot of
+              knowledge of System Design and Software Architecture and
+              invaluable soft skills to be an excellent team member in the
+              future. Doing this allowed me to pass the
+              <b>AWS Certified Developer - Associate</b> exam during my
+              undergrad, so, I'm AWS certified. Currently, I'm taking courses
+              for the <b>Meta Backend Developer Professional Certificate</b>.
+            </p>
+
+            <p>
+              I like writing and note-taking, and therefore I value Notion. I
+              took the initiative and became my university's first Notion Campus
+              Leader to make people's lives better and organized, more
+              successful, and happier.
+            </p>
+
+            <p>
+              I love spending time with my family and friends and traveling. I
+              went to Canada as an exchange student in the Winter of 2024, where
+              I experienced North America as a university student, ramped up my
+              English to an advanced level, and traveled a LOT.
             </p>
           </div>
         </div>
