--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
             </p>
 
             <p>
-              I like writing and note-taking, and therefore I value Notion. I
-              took the initiative and became my university's first Notion Campus
-              Leader to make people's lives better and organized, more
-              successful, and happier.
+              I like writing and note-taking, and therefore I value
+              <b>Notion</b>. I took the initiative and became my university's
+              first Notion Campus Leader to make people's lives better and
+              organized, more successful, and happier.
             </p>
 
             <p>
               I love spending time with my family and friends and traveling. I
-              went to Canada as an exchange student in the Winter of 2024, where
-              I experienced North America as a university student, ramped up my
-              English to an advanced level, and traveled a LOT.
+              went to <b>Canada</b> as an exchange student in the Winter of
+              2024, where I experienced North America as a university student,
+              ramped up my English to an advanced level, and traveled a LOT.
             </p>
           </div>
         </div>
