--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
             </p>
 
             <p>
-              I like writing and note-taking, and therefore I value
+              I like writing and note-taking, and therefore I love using
               <b>Notion</b>. I took the initiative and became my university's
               first Notion Campus Leader to make people's lives better and
               organized, more successful, and happier.
             </p>
 
             <p>
-              I love spending time with my family and friends and traveling. I
+              I love spending time with my family and friends, and traveling. I
               went to <b>Canada</b> as an exchange student in the Winter of
               2024, where I experienced North America as a university student,
               ramped up my English to an advanced level, and traveled a LOT.
