Update About Me

--- a/index.html
+++ b/index.html
@@ -127,14 +127,11 @@
             </p>
             <p>
               As a backend engineer, it's no surprise I love backend systems,
-              infrastructure, and distributed systems. I want to pursue two
-              different career paths in software engineering:
-              <b>Full Stack + Product</b> and <b>Backend + Infrastructure</b>. I
-              will stick with one after trying both and see which one I perform
-              well or am more suited to. Meanwhile, I'm open to both positions.
-              I want to work mainly for big tech companies in European offices,
-              working on large-scale systems and products, making people's lives
-              easier and having a lasting impact.
+              infrastructure, and distributed systems. I want to pursue one path
+              in software engineering: <b>Backend + Infrastructure</b>. I want
+              to work for big tech companies in European offices, working on
+              large-scale systems and products, making people's lives easier and
+              having a lasting impact.
             </p>
 
             <p>
